styles/main.css
html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  margin: 0;
  color: #333;
  background-color: #fafafa;
  font-family: 'Open Sans', sans-serif;
}

header {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

nav {
  width: 100%;
  height: 55px;
  border-bottom: 4px solid #a2a2a2;

  display: flex;
  justify-content: center;
  align-items: center;

  background-color: #181818;
  color: #fafafa;
}

nav.fixed {
  position: fixed;
  top: 0px;
}

nav a {
  margin: 0px 25px;
  transition: color .25s;
  text-decoration: none;
  color: inherit;
  transition: color 0.25s;
}

nav a.active {
  color: red;
}

@media (hover: hover) {
  nav a:hover {
    color: red;
  }
}

section {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px;
}

section:nth-child(2n+1) {
  background-color: #efefef;
}

footer {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 100px;
  border-top: 4px solid #a2a2a2;
  background-color: #212121;
}

footer a {
  text-decoration: none;
  margin: 0px 30px;
  border-radius: 4px;
  font-size: 36px;
  color: #fafafa;
  transition: all 0.25s;
}

footer a:hover {
  color: red;
}

h1 {
  font-family: 'Roboto Slab', serif;
  text-align: center;
  color: #fafafa;
  font-size: 48pt;
}

h2 {
  font-size: 20pt;
  text-align: center;
}

h2::after {
  content: '';
  display: block;
  width: 50px;
  border-bottom: 2px solid #333;
  margin: 10px auto;
}

h3 {
  margin: 0px 0px 20px 0px;
}

p {
  margin: 0;
}

#particles-js {
  position: absolute;
  background-color: #212121;
  top: 0px;
  bottom: 0px;
  left: -100px;
  right: -100px;
  z-index: -1;
}

#title {
  flex: 1;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 940px;
  width: 100%;
}

.work-item {
  display: flex;
  width: 100%;
  padding: 40px 0px;
  border-top: 1px solid #a2a2a2;
}

.work-item:first-of-type {
  border-top: none;
}

.work-item-content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

@media (min-width: 1000px) {
  .work-item img {
    display: block;
    width: 400px;
  }

  .work-item h3 {
    align-self: flex-start;
  }

  .work-item-content {
    padding-left: 20px;
  }
}

@media (max-width: 999px) {
  .work-item {
    flex-direction: column;
    align-items: center;
  }

  .work-item img {
    max-width: 550px;
    width: 100%;
  }

  .work-item-content {
    margin-top: 20px;
    max-width: 800px;
    width: 100%;
  }

  .work-item .outline-button-dark {
    margin-top: 30px;
  }
}

.outline-button-dark {
  margin-top: auto;
  color: #212121;
  border: 2px solid #212121;
  line-height: 30px;
  padding: 0px 30px;
  cursor: pointer;
  transition: all 0.25s;
}

.outline-button-dark:hover {
  color: #fefefe;
  background-color: #212121;
}

.modal {
  display: none;
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background-color: rgba(0, 0, 0, 0.5);
}

